--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jason.route_application">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -36,6 +37,13 @@
         <activity android:name=".view.AddressDetailsActivity" />
         <activity android:name=".view.CommentDisplayActivity" />
         <activity android:name=".view.CommentInputActivity"></activity>
+
+        <service
+            android:name=".model.RouteActivityJobScheduler"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="true">
+        </service>
+
     </application>
 
 </manifest>
