--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,8 @@ dependencies {
 
     implementation 'com.google.dagger:dagger:2.14'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.14'
-
+    compile 'com.google.dagger:dagger-android-support:2.14' // if you use the support libraries
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.14'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
