--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.14'
     compile 'com.google.dagger:dagger-android-support:2.14' // if you use the support libraries
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.14'
+
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
@@ -43,4 +44,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.2'
 
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.android.support:design:26.1.0'
 }
