--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jason.route_application_kotlin">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application android:name=".RouteApplication"
 
         android:allowBackup="true"
