--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,15 +4,14 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application android:name=".RouteApplication"
-
+    <application
+        android:name=".RouteApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".features.routeInput.RouteInputActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,11 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".features.route.RouteActivity" />
-
-        <activity android:name=".features.addressDetails.AddressDetailsActivity"></activity>
-
+        <activity android:name=".features.addressDetails.AddressDetailsActivity" />
+        <activity android:name=".features.CommentInput.CommentInputActivity" />
+        <activity android:name=".features.CommentDisplay.CommentDisplayActivity"></activity>
     </application>
 
 </manifest>
