--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,6 @@ android {
         }
     }
 }
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
@@ -31,19 +30,23 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+
+    implementation 'com.google.code.gson:gson:2.8.2'
+
     implementation 'com.google.dagger:dagger:2.14'
+    implementation 'com.google.dagger:dagger-android-support:2.14'
+    // if you use the support libraries
     annotationProcessor 'com.google.dagger:dagger-compiler:2.14'
-    compile 'com.google.dagger:dagger-android-support:2.14' // if you use the support libraries
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.14'
 
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
-    compile 'com.google.code.gson:gson:2.8.2'
-
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.google.android.gms:play-services-places:11.8.0'
 }
+
