--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     implementation 'com.google.android.gms:play-services-places:11.8.0'
+
+    implementation 'com.google.android.gms:play-services-location:11.8.0'
 }
 
