--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.jason.route_application_kotlin">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:name=".RouteApplication"
@@ -28,8 +30,8 @@
         </activity>
         <activity android:name=".features.route.RouteActivity" />
         <activity android:name=".features.addressDetails.AddressDetailsActivity" />
-        <activity android:name=".features.CommentInput.CommentInputActivity" />
-        <activity android:name=".features.CommentDisplay.CommentDisplayActivity" />
+        <activity android:name=".features.commentInput.CommentInputActivity" />
+        <activity android:name=".features.commentDisplay.CommentDisplayActivity" />
         <activity android:name=".features.correctInvalidAddresses.CorrectInvalidAddressesActivity"></activity>
     </application>
 
