--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
-    implementation 'com.google.android.gms:play-services-places:11.8.0'
+    implementation 'com.google.android.gms:play-services-places:12.0.0'
 
-    implementation 'com.google.android.gms:play-services-location:11.8.0'
+    implementation 'com.google.android.gms:play-services-location:12.0.0'
+
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
 
