--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".features.route.RouteActivity"/>
+        <activity android:name=".features.route.RouteActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
         <activity android:name=".features.addressDetails.AddressDetailsActivity"/>
         <activity
             android:name=".features.commentInput.CommentInputActivity"
