--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:12.0.1'
 
     implementation 'org.greenrobot:eventbus:3.1.1'
+
+    implementation 'com.github.jd-alexander:library:1.1.0'
 }
 
