--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:windowSoftInputMode="adjustPan">
         </activity>
         <activity
-            android:name=".features.route.RouteActivity"
+            android:name=".features.container.ContainerActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
         <activity android:name=".features.addressDetails.AddressDetailsActivity"/>
         <activity
