--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,7 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
 
     implementation 'com.github.jd-alexander:library:1.1.0'
+
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
+
 }
