--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,12 +32,11 @@
 
         <activity android:name=".features.login.LoginActivity"/>
 
-        <activity
-            android:name=".features.container.ContainerActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            />
+        <activity android:name=".features.container.ContainerActivity"
+                  android:theme="@style/Theme.AppCompat.NoActionBar"/>
 
-        <activity android:name=".features.addressDetails.AddressDetailsActivity"/>
+        <activity android:name=".features.addressDetails.AddressDetailsActivity"
+                  android:theme="@style/Theme.AppCompat.NoActionBar"/>
 
         <activity android:name=".features.commentDisplay.CommentDisplayActivity"/>
 
