--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
 
     implementation 'com.google.maps.android:android-maps-utils:0.5'
 
+    implementation 'com.android.support:cardview-v7:27.1.1'
 }
